[gd_scene load_steps=6 format=3 uid="uid://bskg2xljsxctn"]

[ext_resource type="Script" path="res://source/master_server/master_main.gd" id="1_6d3fm"]
[ext_resource type="Script" path="res://source/master_server/components/gateway_manager_server.gd" id="2_hsh87"]
[ext_resource type="Script" path="res://source/master_server/components/world_manager_server.gd" id="3_qbesc"]
[ext_resource type="Script" path="res://source/master_server/components/authentication_manager.gd" id="4_1tf2k"]
[ext_resource type="Script" path="res://source/master_server/components/master_database.gd" id="5_mync2"]

[node name="MasterMain" type="Node"]
script = ExtResource("1_6d3fm")

[node name="GatewayManagerServer" type="Node" parent="." node_paths=PackedStringArray("world_manager", "authentication_manager", "database")]
script = ExtResource("2_hsh87")
world_manager = NodePath("../WorldManagerServer")
authentication_manager = NodePath("../AuthenticationManager")
database = NodePath("../Database")

[node name="WorldManagerServer" type="Node" parent="." node_paths=PackedStringArray("authentication_manager", "gateway_manager", "database")]
script = ExtResource("3_qbesc")
authentication_manager = NodePath("../AuthenticationManager")
gateway_manager = NodePath("../GatewayManagerServer")
database = NodePath("../Database")

[node name="AuthenticationManager" type="Node" parent="." node_paths=PackedStringArray("database")]
script = ExtResource("4_1tf2k")
database = NodePath("../Database")

[node name="Database" type="Node" parent="."]
script = ExtResource("5_mync2")
